[gd_scene load_steps=12 format=2]

[ext_resource path="res://minigame_assets/pruning bar.png" type="Texture" id=1]
[ext_resource path="res://minigame_assets/pruning progress.png" type="Texture" id=2]
[ext_resource path="res://PruningCutSpotBar.gd" type="Script" id=3]
[ext_resource path="res://PruningCutSpot.gd" type="Script" id=4]
[ext_resource path="res://minigame_assets/target_f1.png" type="Texture" id=5]
[ext_resource path="res://PruningCutSpotBubble.gd" type="Script" id=6]
[ext_resource path="res://minigame_assets/target_f0.png" type="Texture" id=7]
[ext_resource path="res://minigame_assets/target_f2.png" type="Texture" id=8]
[ext_resource path="res://minigame_assets/target_f3.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 5 ) ],
"loop": true,
"name": "circle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 15.524

[node name="PruningCutSpot" type="Node2D" groups=[
"cutspots",
]]
script = ExtResource( 4 )

[node name="GreenBar" type="TextureProgress" parent="."]
margin_left = 58.8487
margin_top = 0.506065
margin_right = 928.849
margin_bottom = 80.5061
rect_scale = Vector2( 0.17, 0.27 )
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TickTimer" type="Timer" parent="."]
wait_time = 0.01

[node name="PruningCutSpotBubble" type="Area2D" parent="."]
position = Vector2( 123.077, 55.4965 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="PruningCutSpotBubble"]
position = Vector2( 3.9499, 3.20312 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
animation = "circle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PruningCutSpotBubble"]
position = Vector2( 4.05927, 2.81287 )
scale = Vector2( 2.1, 2.1 )
shape = SubResource( 2 )

[node name="LifeTimer" type="Timer" parent="." groups=[
"cutspots",
]]

[node name="LifeLabel" type="Label" parent="."]
margin_left = 85.0
margin_top = 27.0
margin_right = 100.0
margin_bottom = 42.0
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
[connection signal="clicked" from="PruningCutSpotBubble" to="." method="_on_PruningCutSpotBubble_clicked"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
